package com.geekinstitut.smartmoney.entity;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.Id;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.util.UUID;

@Entity
@Data
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class AppSetting {
        @Id
        @GeneratedValue
        private UUID id;

        @Column(nullable = false, unique = true)
        private String name;

        @Column(nullable = false, unique = true)
        private String key;

        @Column(nullable = false)
        private String value;
}