package com.geekinstitut.smartmoney.entity;

import jakarta.persistence.Entity;
import lombok.Getter;
import lombok.Setter;

@Entity
@Getter
@Setter
public class Expense extends Transaction {
}