package com.geekinstitut.smartmoney.enums;

public enum CategoryType {
    income,
    expense
}
